--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://khgamal005.github.io/ecommerce-store-by-react",
+  "homepage": "https://khgamal005.github.io/ecom-store",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
